# tiny-logger

./: .gitignore  CMakeLists.txt
src/: AsyncLogging.cpp  FileUtil.cpp  LogFile.cpp  LogStream.cpp  Logging.cpp
src/base/: Thread.cpp  Timestamp.cpp
src/include/: AsyncLogging.h  FixedBuffer.h  LogStream.h  Logging.h
src/include/base/: Semaphore.h  Thread.h  Timestamp.h
test/: main.cpp
